src/parser/swiftParser.java
// Generated from D:/Documentos/SwiftCompiler/src/grammars\swift.g4 by ANTLR 4.5.3
package parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class swiftParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, TK_BREAK = 7, TK_CONTINUE = 8,
            TK_LET = 9, TK_VAR = 10, TK_COLON = 11, TK_SEMI_COLON = 12, TK_INT = 13, TK_FLOAT = 14,
            TK_DOUBLE = 15, TK_BOOL = 16, TK_STRING = 17, TK_DIC = 18, TK_ARRAY = 19, TK_VOID = 20,
            TK_TRUE = 21, TK_FALSE = 22, TK_WHERE = 23, TK_IF = 24, TK_ELSE = 25, TK_SWITCH = 26,
            TK_COUNT = 27, TK_CONCAT = 28, TK_DO = 29, TK_WHILE = 30, TK_FOR = 31, TK_IN = 32,
            TK_CASE = 33, TK_DEFAULT = 34, TK_AS = 35, TK_IS = 36, TK_FUNCTION = 37, INC = 38,
            DEC = 39, ARROW = 40, MUL = 41, DIV = 42, ADD = 43, SUB = 44, MOD = 45, RANGE = 46, UPRANGE = 47,
            AND = 48, OR = 49, NOT = 50, ANDB = 51, ORB = 52, XORB = 53, EQ = 54, DISTINCT = 55, GTE = 56,
            LTE = 57, GT = 58, LT = 59, ASSIG = 60, ANDEQ = 61, OREQ = 62, PLUSEQ = 63, TIMESEQ = 64,
            SUBEQ = 65, DIVEQ = 66, MODEQ = 67, LOCAL = 68, TK_PAR_RIGHT = 69, TK_PAR_LEFT = 70,
            TK_RETURN = 71, TK_PRINT = 72, TK_PRINTLN = 73, TK_COMA = 74, TK_IDENT = 75, Binary_literal = 76,
            Octal_literal = 77, Decimal_literal = 78, Pure_decimal_digits = 79, Hexadecimal_literal = 80,
            Floating_point_literal = 81, Static_string_literal = 82, WS = 83, Block_comment = 84,
            Line_comment = 85;
    public static final int
            RULE_top_level = 0, RULE_statements = 1, RULE_statement = 2, RULE_print_call = 3,
            RULE_function_call = 4, RULE_branch_statement = 5, RULE_control_transfer_statement = 6,
            RULE_break_statement = 7, RULE_continue_statement = 8, RULE_return_statement = 9,
            RULE_declaration = 10, RULE_code_block = 11, RULE_constant_declaration = 12,
            RULE_variable_declaration = 13, RULE_function_declaration = 14, RULE_func_parameter = 15,
            RULE_type = 16, RULE_dic_type = 17, RULE_ftype = 18, RULE_ltype = 19,
            RULE_loop_statement = 20, RULE_do_statement = 21, RULE_end_for = 22, RULE_for_statement = 23,
            RULE_for_init = 24, RULE_expression_list = 25, RULE_while_statement = 26,
            RULE_where_clause = 27, RULE_if_statement = 28, RULE_else_clause = 29,
            RULE_switch_statement = 30, RULE_case_label = 31, RULE_default_label = 32,
            RULE_expression = 33, RULE_range_ops = 34, RULE_literal = 35, RULE_array_literal = 36,
            RULE_dic_literal = 37, RULE_dic_item = 38, RULE_dic_item_list = 39, RULE_numeric_literal = 40,
            RULE_boolean_literal = 41, RULE_integer_literal = 42, RULE_string_literal = 43;
    public static final String[] ruleNames = {
            "top_level", "statements", "statement", "print_call", "function_call",
            "branch_statement", "control_transfer_statement", "break_statement", "continue_statement",
            "return_statement", "declaration", "code_block", "constant_declaration",
            "variable_declaration", "function_declaration", "func_parameter", "type",
            "dic_type", "ftype", "ltype", "loop_statement", "do_statement", "end_for",
            "for_statement", "for_init", "expression_list", "while_statement", "where_clause",
            "if_statement", "else_clause", "switch_statement", "case_label", "default_label",
            "expression", "range_ops", "literal", "array_literal", "dic_literal",
            "dic_item", "dic_item_list", "numeric_literal", "boolean_literal", "integer_literal",
            "string_literal"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'{'", "'}'", "'['", "']'", "'.'", "'?'", "'break'", "'continue'",
            "'let'", "'var'", "':'", "';'", null, null, null, null, "'String'", "'Dictionary'",
            "'Array'", "'Void'", "'true'", "'false'", "'where'", "'if'", "'else'",
            "'switch'", "'count'", "'concat'", "'do'", "'while'", "'for'", "'in'",
            "'case'", "'default'", "'as'", "'is'", "'func'", "'++'", "'--'", "'->'",
            "'*'", "'/'", "'+'", "'-'", "'%'", "'..'", "'...'", "'&&'", "'||'", "'!'",
            "'&'", "'|'", "'^'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'='",
            "'&='", "'|='", "'+='", "'*='", "'-='", "'/='", "'%='", "'$'", "')'",
            "'('", "'return'", "'print'", "'println'", "','"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, "TK_BREAK", "TK_CONTINUE", "TK_LET",
            "TK_VAR", "TK_COLON", "TK_SEMI_COLON", "TK_INT", "TK_FLOAT", "TK_DOUBLE",
            "TK_BOOL", "TK_STRING", "TK_DIC", "TK_ARRAY", "TK_VOID", "TK_TRUE", "TK_FALSE",
            "TK_WHERE", "TK_IF", "TK_ELSE", "TK_SWITCH", "TK_COUNT", "TK_CONCAT",
            "TK_DO", "TK_WHILE", "TK_FOR", "TK_IN", "TK_CASE", "TK_DEFAULT", "TK_AS",
            "TK_IS", "TK_FUNCTION", "INC", "DEC", "ARROW", "MUL", "DIV", "ADD", "SUB",
            "MOD", "RANGE", "UPRANGE", "AND", "OR", "NOT", "ANDB", "ORB", "XORB",
            "EQ", "DISTINCT", "GTE", "LTE", "GT", "LT", "ASSIG", "ANDEQ", "OREQ",
            "PLUSEQ", "TIMESEQ", "SUBEQ", "DIVEQ", "MODEQ", "LOCAL", "TK_PAR_RIGHT",
            "TK_PAR_LEFT", "TK_RETURN", "TK_PRINT", "TK_PRINTLN", "TK_COMA", "TK_IDENT",
            "Binary_literal", "Octal_literal", "Decimal_literal", "Pure_decimal_digits",
            "Hexadecimal_literal", "Floating_point_literal", "Static_string_literal",
            "WS", "Block_comment", "Line_comment"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public swiftParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "swift.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final Top_levelContext top_level() throws RecognitionException {
        Top_levelContext _localctx = new Top_levelContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_top_level);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                statements();
                setState(89);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementsContext statements() throws RecognitionException {
        StatementsContext _localctx = new StatementsContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statements);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << TK_BREAK) | (1L << TK_CONTINUE) | (1L << TK_LET) | (1L << TK_VAR) | (1L << TK_INT) | (1L << TK_FLOAT) | (1L << TK_BOOL) | (1L << TK_STRING) | (1L << TK_DIC) | (1L << TK_TRUE) | (1L << TK_FALSE) | (1L << TK_IF) | (1L << TK_SWITCH) | (1L << TK_COUNT) | (1L << TK_DO) | (1L << TK_WHILE) | (1L << TK_FOR) | (1L << TK_FUNCTION) | (1L << INC) | (1L << DEC) | (1L << ADD) | (1L << SUB) | (1L << NOT))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (LOCAL - 68)) | (1L << (TK_PAR_LEFT - 68)) | (1L << (TK_RETURN - 68)) | (1L << (TK_PRINT - 68)) | (1L << (TK_PRINTLN - 68)) | (1L << (TK_IDENT - 68)) | (1L << (Binary_literal - 68)) | (1L << (Octal_literal - 68)) | (1L << (Decimal_literal - 68)) | (1L << (Pure_decimal_digits - 68)) | (1L << (Hexadecimal_literal - 68)) | (1L << (Floating_point_literal - 68)) | (1L << (Static_string_literal - 68)))) != 0)) {
                    {
                        {
                            setState(91);
                            statement();
                            setState(93);
                            _la = _input.LA(1);
                            if (_la == TK_SEMI_COLON) {
                                {
                                    setState(92);
                                    match(TK_SEMI_COLON);
                                }
                            }

                        }
                    }
                    setState(99);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_statement);
        try {
            setState(108);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    _localctx = new EXP_STContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(100);
                    expression(0);
                }
                break;
                case 2:
                    _localctx = new DEC_STContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(101);
                    declaration();
                }
                break;
                case 3:
                    _localctx = new LOOP_STContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(102);
                    loop_statement();
                }
                break;
                case 4:
                    _localctx = new BRANCH_STContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(103);
                    branch_statement();
                }
                break;
                case 5:
                    _localctx = new CTRL_STContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(104);
                    control_transfer_statement();
                }
                break;
                case 6:
                    _localctx = new PRINT_STContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(105);
                    print_call();
                }
                break;
                case 7:
                    _localctx = new FUNC_STContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(106);
                    function_call();
                }
                break;
                case 8:
                    _localctx = new CODE_BLK_STContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(107);
                    code_block();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Print_callContext print_call() throws RecognitionException {
        Print_callContext _localctx = new Print_callContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_print_call);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                ((Print_callContext) _localctx).op = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == TK_PRINT || _la == TK_PRINTLN)) {
                    ((Print_callContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                } else {
                    consume();
                }
                setState(111);
                match(TK_PAR_LEFT);
                setState(112);
                expression(0);
                setState(113);
                match(TK_PAR_RIGHT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Function_callContext function_call() throws RecognitionException {
        Function_callContext _localctx = new Function_callContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_function_call);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                match(TK_IDENT);
                setState(116);
                match(TK_PAR_LEFT);
                setState(118);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << TK_INT) | (1L << TK_FLOAT) | (1L << TK_BOOL) | (1L << TK_STRING) | (1L << TK_DIC) | (1L << TK_TRUE) | (1L << TK_FALSE) | (1L << TK_COUNT) | (1L << INC) | (1L << DEC) | (1L << ADD) | (1L << SUB) | (1L << NOT))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (LOCAL - 68)) | (1L << (TK_PAR_LEFT - 68)) | (1L << (TK_IDENT - 68)) | (1L << (Binary_literal - 68)) | (1L << (Octal_literal - 68)) | (1L << (Decimal_literal - 68)) | (1L << (Pure_decimal_digits - 68)) | (1L << (Hexadecimal_literal - 68)) | (1L << (Floating_point_literal - 68)) | (1L << (Static_string_literal - 68)))) != 0)) {
                    {
                        setState(117);
                        expression_list();
                    }
                }

                setState(120);
                match(TK_PAR_RIGHT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Branch_statementContext branch_statement() throws RecognitionException {
        Branch_statementContext _localctx = new Branch_statementContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_branch_statement);
        try {
            setState(124);
            switch (_input.LA(1)) {
                case TK_IF:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(122);
                    if_statement();
                }
                break;
                case TK_SWITCH:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(123);
                    switch_statement();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Control_transfer_statementContext control_transfer_statement() throws RecognitionException {
        Control_transfer_statementContext _localctx = new Control_transfer_statementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_control_transfer_statement);
        try {
            setState(129);
            switch (_input.LA(1)) {
                case TK_BREAK:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(126);
                    break_statement();
                }
                break;
                case TK_CONTINUE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(127);
                    continue_statement();
                }
                break;
                case TK_RETURN:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(128);
                    return_statement();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Break_statementContext break_statement() throws RecognitionException {
        Break_statementContext _localctx = new Break_statementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_break_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(TK_BREAK);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Continue_statementContext continue_statement() throws RecognitionException {
        Continue_statementContext _localctx = new Continue_statementContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_continue_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(133);
                match(TK_CONTINUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Return_statementContext return_statement() throws RecognitionException {
        Return_statementContext _localctx = new Return_statementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_return_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                match(TK_RETURN);
                setState(137);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                    case 1: {
                        setState(136);
                        expression(0);
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_declaration);
        try {
            setState(142);
            switch (_input.LA(1)) {
                case TK_VAR:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(139);
                    variable_declaration();
                }
                break;
                case TK_LET:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(140);
                    constant_declaration();
                }
                break;
                case TK_FUNCTION:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(141);
                    function_declaration();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Code_blockContext code_block() throws RecognitionException {
        Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_code_block);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                match(T__0);
                setState(145);
                statements();
                setState(146);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Constant_declarationContext constant_declaration() throws RecognitionException {
        Constant_declarationContext _localctx = new Constant_declarationContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_constant_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                match(TK_LET);
                setState(149);
                match(TK_IDENT);
                setState(152);
                _la = _input.LA(1);
                if (_la == TK_COLON) {
                    {
                        setState(150);
                        match(TK_COLON);
                        setState(151);
                        type(0);
                    }
                }

                setState(156);
                _la = _input.LA(1);
                if (_la == ASSIG) {
                    {
                        setState(154);
                        match(ASSIG);
                        setState(155);
                        expression(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Variable_declarationContext variable_declaration() throws RecognitionException {
        Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_variable_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(158);
                match(TK_VAR);
                setState(159);
                match(TK_IDENT);
                setState(162);
                _la = _input.LA(1);
                if (_la == TK_COLON) {
                    {
                        setState(160);
                        match(TK_COLON);
                        setState(161);
                        type(0);
                    }
                }

                setState(166);
                _la = _input.LA(1);
                if (_la == ASSIG) {
                    {
                        setState(164);
                        match(ASSIG);
                        setState(165);
                        expression(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
